# metrics-datadog-exporter-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: audit.yml  automerge.yml  ci.yml  release.yml
examples/: write_on_schedule.rs  write_to_api.rs  write_to_stdout.rs
src/: builder.rs  data.rs  exporter.rs  handle.rs  lib.rs  recorder.rs
tests/: api_test.rs  collect_test.rs
