[package]
name = "metrics-datadog-exporter"
version = "0.1.10-alpha.0"
authors = ["Aaron Griffin <aaron@sevco.io"]
edition = "2021"

license = "MIT"
description = "A `metrics` compatible exporter that sends metrics to DataDog"
repository = "https://github.com/sevco/metrics-datadog-exporter-rs"
documentation = "https://docs.rs/metrics-datadog-exporter"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metrics = "^0.18"
metrics-util = "^0.11"
parking_lot = "^0.12"
thiserror = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_with = "^1.9"
chrono = "^0.4"
reqwest = { version = "^0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "^1.12", features = ["macros"] }
tokio_schedule = "^0.3"
log = "^0.4"
itertools = "^0.10"

[dev-dependencies]
metrics-macros = "^0.5"
anyhow = "^1.0"
httpmock = "^0.6"
once_cell = "^1.7"
env_logger = "^0.9"
