[package]
name = "metrics-datadog-exporter"
version = "0.1.14"
authors = ["Aaron Griffin <aaron@sevco.io"]
edition = "2021"

license = "MIT"
description = "A `metrics` compatible exporter that sends metrics to DataDog"
repository = "https://github.com/sevco/metrics-datadog-exporter-rs"
documentation = "https://docs.rs/metrics-datadog-exporter"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metrics = "0.24.1"
metrics-util = "0.15.1"
# pinned to metrics version
parking_lot = "^0.12"
thiserror = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_with = "3.4.0"
chrono = "^0.4"
reqwest = { version = "^0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "^1.12", features = ["macros"] }
tokio_schedule = "^0.3"
tracing = "^0.1"
itertools = "^0.13"
flate2 = "^1.0"
futures = "^0.3"

[dev-dependencies]
anyhow = "^1.0"
httpmock = "^0.7"
once_cell = "^1.7"
log = "^0.4"
env_logger = "^0.11"
assert-json-diff = "^2.0"
